--- a/donate.html
+++ b/donate.html
@@ -58,7 +58,7 @@
       <p>Thank you for your donation using the <a href="https://lightning.network/" target="_blank">Lightning Network</a> ⚡.</p>
   </header>
     <section>
-      <p>No Lightning wallet? try <a href="https://www.walletofsatoshi.com/" target="_blank">Wallet of Satoshi</a>. Mining on NiceHash? check <a href="https://www.nicehash.com/blog/post/how-to-withdraw-bitcoin-btc-from-nicehash-using-lightning-network" target="_blank">this official post</a>.</p>
+      <p>No Lightning wallet? try <a href="https://www.walletofsatoshi.com/" target="_blank">Wallet of Satoshi</a>. Mining on NiceHash? check <a href="https://www.nicehash.com/blog/post/how-to-withdraw-bitcoin-btc-from-nicehash-using-lightning-network" target="_blank">this official post</a> or see my step by step guide <a href="https://github.com/totakaro/nicehash-donate-lightning">here</a>.</p>
       <p>My Discord is totakaro#5997 any feedback just let me know.</p>
       <form action="/donate">
 	<label for="amount">Donate <span id="sats"></span> Satoshi (<span id="btc"></span> BTC) about <span id="usd"></span> USD: </label>
